[package]
name = "aocli-runner"
version = "0.1.0"
authors = ["Sam Collins <samc3259@gmail.com"]
edition = "2021"
description = "Runner for Advent of Code solutions with aocli"
documentation = "https://docs.rs/aocli-runner"
readme = "README.md"
repository = "https://github.com/scjqt/aoc-runner"
license = "MIT"

[lib]
name = "aoc"

[dependencies]