[package]
name = "aoclib"
version = "0.2.1"
authors = ["Sam Collins <samc3259@gmail.com>"]
edition = "2021"
description = "Runner for Advent of Code solutions with aocli"
documentation = "https://docs.rs/aoclib"
readme = "README.md"
repository = "https://github.com/sncxyz/aoclib"
license = "MIT"

[lib]
name = "aoc"

[dependencies]